# stortinget

./: .pre-commit-config.yaml  .sqlfluff  README.md  pyproject.toml  pytest.ini
.github/actions/uv-setup/: action.yml
.github/workflows/: ci.yml  uv-setup.yml
dbt_project/: .user.yml  README.md
tests/: test_placeholder.py
tests/e2e/: test_pipeline.py
tests/integration/: test_dbt_models.py
tests/unit/: test_utils.py
