[project]
name = "stortinget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "dagster>=1.11.8",
    "dagster-dbt>=0.27.8",
    "dagster-webserver>=1.11.8",
    "dbt-duckdb>=1.9.4",
    "dlt>=1.15.0",
    "duckdb>=1.3.2",
    "marimo>=0.15.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
